<resources>
    <string name="app_name">StudyGroup</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Welcome to StudyGroup!</string>
    <string name="user_hint">Enter username</string>
    <string name="user_name" />
    <string name="pass_hint">Enter password</string>
    <string name="password" />
    <string name="button_text">Login</string>
    <string name="new_login">Make new username</string>
    <string name="title_activity_give_info">GiveInfo</string>
    <string name="user">Username:</string>
    <string name="new_password">Make a new password</string>
    <string name="email_info">Enter email</string>
    <string name="title_activity_choose_category">ChooseCategory</string>


    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="go_group">Find
        Groups!</string>
    <string name="title_activity_available_groups">available_groups</string>
    <string name="title_activity_all_groups">AllGroups</string>
    <string name="group_plus">add</string>
    <string name="title_activity_make_group">MakeGroup</string>

    <string name="class_hint">Enter class you wish to study</string>
    <string name="time_enter">Enter at what time you wish to start</string>
    <string name="where_study">Enter where you would like to study</string>
    <string name="amount_of_study">Enter how many people you want to study with you:</string>
    <string name="how_many">Ideal amount of people:</string>
    <string name="maker">Make Group!</string>
    <string name="submit">Make Group!</string>


    <string-array name="number_arrays">
        <item>Choose amount of study partners</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
</resources>
